<resources>
    <string name="app_name">Sportiverse</string>
    <string name="weight_hint">Enter your weight</string>
    <string name="weight">Weight</string>
    <string name="body_fat">Body Fat (%)</string>
    <string name="date_e_g_2023_01_01">Date (e.g., 2023-01-01)</string>
    <string name="lbs">LBS</string>
    <string name="kg">KG</string>
    <string name="save">Save</string>
    <string name="weather_icon">Weather icon</string>
    <string name="loading">Loading</string>
    <string name="sticker" />
</resources>